# heliograph

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
scripts/: run.sh
src/heliograph/: __init__.py  main.py  registry.py  renderer.py  sender.py  summarizer.py
src/heliograph/components/: __init__.py  arxiv_trending.py  base.py  daily_quote.py  github_trending.py  hn_top.py  market_fear.py  markets_summary.py  skill_trending.py  system_status.py
src/heliograph/templates/: email.html
tests/: test_components.py
